Fix build and fmt